# aws-polly-c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMake/: libllhttp.cmake  libmbedtls.cmake
samples/: CMakeLists.txt
samples/polly_mp3_download/: CMakeLists.txt  polly_mp3_download.c
src/: CMakeLists.txt
src/include/polly/: polly.h
src/source/: http_parser.c  http_parser.h  netio.c  netio.h  polly.c  sigv4.c  sigv4.h
